# Zeus-Artifact-Restoration

./: .gitignore  .gitmodules  README.md
PC/else/: main.py
PC/else/config/: config.yaml
PC/else/src/communication/: socket_server.py
PC/else/src/motion/: ik_solver.py
PC/else/src/planning/: math.py  spawn.py
PC/else/src/vision/: camera.py
PC/else/urdf/: ####UR3e_Master_Device
PC/else/urdf/ur3e/urdf/: ur3e.srdf
PC/planning/: CMakeLists.txt
PC/planning/data/: sample_fragment.pcd
PC/planning/src/: factory_stub.cpp  main.cpp
